<resources>
    <string name="app_name">Math, Algorithms, And Data Structures</string>
    <string name="AlgorithmsTabFirstButton">Dijkstra\'s Algorithm</string>
    <string name="AlgorithmsTabSecondButton">A* Search Algorithm</string>
    <string name="AlgorithmsTabThirdButton">Insertion Sort</string>
    <string name="AlgorithmsTabFourthButton">Bubble Sort</string>
    <string name="AlgorithmsTabFifthButton">Selection Sort</string>
    <string name="AlgorithmsTabSixthButton">Heap Sort</string>
    <string name="MathTabFirstButton">Bézier Curves</string>
    <string name="MathTabSecondButton">Vector Projection</string>
    <string name="DataStructuresTabFirstButton">Stacks</string>
    <string name="DataStructuresTabSecondButton">Queues</string>
    <string name="Integrals">Integrals</string>
    <string name="TaylorSeries">Taylor Series</string>
    <string name="InsertionSort">Insertion Sort</string>
    <string name="SelectionSort">Selection Sort</string>
    <string name="HeapSort">Heap Sort</string>
    <string name="Derivatives">Derivatives</string>
    <string name="LagrangeInterpolation">Lagrange Interpolation</string>
    <string name="Heaps">Heaps</string>



    <string-array name="integral_function_array">
        <item>3sin(x)</item>
        <item>x\u00B3 - x </item>
        <item>sinh(x)/4</item>
        <item>\3\u221Bx</item>
        <item>\3sin(x\u00B3/3)</item>
    </string-array>

    <string-array name="derivative_function_array">
        <item>2sin(x)</item>
        <item>-2 + x\u00B2</item>
        <item>sinh(x)/4</item>
        <item>\2\u221Bx</item>
        <item>\3sin(x\u00B3/3)</item>
    </string-array>

    <string-array name="taylor_series_function_array">
        <item>cos(x) </item>
        <item>sin(x) </item>
        <item>e^(x) </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="stack_push">Push</string>
    <string name="stack_pop">Pop</string>
    <string name="auto_sort">Sort</string>
    <string name="next_sort">Next</string>
    <string name="queue_enqueue">Queue</string>
    <string name="queue_dequeue">Dequeue</string>
    <string name="maclaurin_series">Maclaurin Series</string>

    <string name="change_in_x"> \u25B3x = x\u2082 - x\u2081</string>
    <string name="change_in_y"> \u25B3y = y\u2082 - y\u2081</string>
    <string name="x_duplicates"> x\u1d62 != x\u2c7c</string>

</resources>
