<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MathTabFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/first_btn"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/mainMenuBtnColor2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/MathTabFirstButton"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                app:cornerRadius="0dp">
            </Button>

            <Button
                android:id="@+id/second_btn"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/mainMenuBtnColor2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/MathTabSecondButton"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                app:cornerRadius="0dp">
            </Button>

            <Button
                android:id="@+id/third_button"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/mainMenuBtnColor2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/Integrals"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                app:cornerRadius="0dp">
            </Button>

            <Button
                android:id="@+id/fourth_button"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/mainMenuBtnColor2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/TaylorSeries"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                app:cornerRadius="0dp">
            </Button>

            <Button
                android:id="@+id/fifth_button"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_margin="3dp"
                android:backgroundTint="@color/mainMenuBtnColor2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/Derivatives"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                app:cornerRadius="0dp">
            </Button>

        </LinearLayout>
</ScrollView>